--- a/package.json
+++ b/package.json
@@ -22,9 +22,8 @@
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
-    "expo-image-manipulator": "^13.1.7",
-    "expo-image-picker": "^16.1.4",
     "expo-image-manipulator": "~14.0.3",
+    "expo-image-picker": "^16.1.4",
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.5",
     "expo-splash-screen": "~0.30.10",
@@ -37,6 +36,7 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.6",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-pager-view": "^6.9.1",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
