feat: offload ingredient usage calculation to worker

--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-tab-view": "^4.1.3",
+    "react-native-threads": "^0.0.19",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "13.13.5",
+    "react-native-worker": "^0.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
